--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <div class="front">
       <div class="pic">
         <div class="imgCont"> 
-          <img id="desk" src="assets/images/image-web-3-desktop.jpg" alt="" srcset="">
-          <img id="mob" src="assets/images/image-web-3-mobile.jpg" alt="" srcset="">
+          <img id="desk" src="assets/images/image-web-3-desktop.jpg" alt="">
+          <img id="mob" src="assets/images/image-web-3-mobile.jpg" alt="">
         </div>
       </div>
       <div class="header"><h1>The Bright Future of Web 3.0?</h1></div>
@@ -48,17 +48,17 @@
       <div class="side">
         <h1>New </h1>
         <div class="content">
-          <h3><a href="">Hydrogen VS Electric Cars</a></h3>
+          <h2><a href="">Hydrogen VS Electric Cars</a></h2>
           <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
         </div>
       <hr>
         <div class="content">
-          <h3><a href="">The Downsides of AI Artistry</a> </h3>
+          <h2><a href="">The Downsides of AI Artistry</a> </h2>
           <p>What are the possible adverse effects of on-demand AI image generation?</p>
         </div>
         <hr>
         <div class="content">
-          <h3><a href="">Is VC Funding Drying Up?</a> </h3>
+          <h2><a href="">Is VC Funding Drying Up?</a> </h2>
           <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
         </div>
         
@@ -66,7 +66,7 @@
     </div>
     <div class="cardCont">
       <div class="div --1">
-        <div class="left"><img src="assets/images/image-retro-pcs.jpg" alt="" srcset=""></div>
+        <div class="left"><img src="assets/images/image-retro-pcs.jpg" alt="" ></div>
         <div class="right">
           <div class="numb">01</div>
           <div class="title"><a href="">Reviving Retro PCs</a> </div>
@@ -74,7 +74,7 @@
         </div>  
       </div>
       <div class="div --2">
-        <div class="left"><img src="assets/images/image-top-laptops.jpg" alt="" srcset=""></div>
+        <div class="left"><img src="assets/images/image-top-laptops.jpg" alt="" ></div>
         <div class="right">
           <div class="numb">02</div>
           <div class="title"><a href="">Top 10 Laptops of 2022</a> </div>
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="div --3">
-        <div class="left"><img src="assets/images/image-gaming-growth.jpg" alt="" srcset=""></div>
+        <div class="left"><img src="assets/images/image-gaming-growth.jpg" alt="" ></div>
         <div class="right">
           <div class="numb">03</div>
           <div class="title"><a href="">The Growth of Gaming</a> </div>
@@ -94,7 +94,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <button href="#" onclick="push">Your Name Here</button>.
+      Coded by <a href="#" >Zahidi</button>.
     </div>
   </footer>
   <script src="/script/script.js"></script>
