--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <div class="menu hide">
         <span></span>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">New</a></li>
-          <li><a href="">Popular</a></li>
-          <li><a href="">Trending</a></li>
-          <li><a href="">Categories</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">New</a></li>
+          <li><a href="#">Popular</a></li>
+          <li><a href="#">Trending</a></li>
+          <li><a href="#">Categories</a></li>
         </ul>
       </div>
       <button  class="menuBtn show" onclick="push()">
@@ -48,17 +48,17 @@
       <div class="side">
         <h1>New </h1>
         <div class="content">
-          <h2><a href="">Hydrogen VS Electric Cars</a></h2>
+          <h2><a href="#">Hydrogen VS Electric Cars</a></h2>
           <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
         </div>
       <hr>
         <div class="content">
-          <h2><a href="">The Downsides of AI Artistry</a> </h2>
+          <h2><a href="#">The Downsides of AI Artistry</a> </h2>
           <p>What are the possible adverse effects of on-demand AI image generation?</p>
         </div>
         <hr>
         <div class="content">
-          <h2><a href="">Is VC Funding Drying Up?</a> </h2>
+          <h2><a href="#">Is VC Funding Drying Up?</a> </h2>
           <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
         </div>
         
@@ -69,7 +69,7 @@
         <div class="left"><img src="assets/images/image-retro-pcs.jpg" alt="" ></div>
         <div class="right">
           <div class="numb">01</div>
-          <div class="title"><a href="">Reviving Retro PCs</a> </div>
+          <div class="title"><a href="#">Reviving Retro PCs</a> </div>
           <div class="con">What happens when old PCs are given modern upgrades?</div>
         </div>  
       </div>
@@ -77,7 +77,7 @@
         <div class="left"><img src="assets/images/image-top-laptops.jpg" alt="" ></div>
         <div class="right">
           <div class="numb">02</div>
-          <div class="title"><a href="">Top 10 Laptops of 2022</a> </div>
+          <div class="title"><a href="#">Top 10 Laptops of 2022</a> </div>
           <div class="con">Our best picks for various needs and budgets.</div>
         </div>
       </div>
@@ -85,7 +85,7 @@
         <div class="left"><img src="assets/images/image-gaming-growth.jpg" alt="" ></div>
         <div class="right">
           <div class="numb">03</div>
-          <div class="title"><a href="">The Growth of Gaming</a> </div>
+          <div class="title"><a href="#">The Growth of Gaming</a> </div>
           <div class="con">How the pandemic has sparked fresh opportunities.</div>
         </div>
       </div>
@@ -94,7 +94,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#" >Zahidi</button>.
+      Coded by <a href="#" >Zahidi</a>.
     </div>
   </footer>
   <script src="/script/script.js"></script>
